# ragtag_crew

./: .env.example  .gitignore  AGENTS.md  MEMORY.md  PROJECT.md  PROMPT_ISSUES.md  README.md  context-system-design.md  mcp_servers.example.json  openapi_tools.example.json  project-roadmap.md  pyproject.toml  python-telegram-agent-proposal.md  search-gateway-plan.md
docs/: background-job-plan.md  claude-code-harness-analysis.md  next-steps.md  paper-integration-plan.md  pending-decisions.md  project-decisions.md  research-agent-toolchain.md  web-frontend-plan.md  weixin-plan-mode-implementation-plan.md
examples/: README.md  gen_lyrics_pdf.py  gen_math_100.py  gen_word_cards_lyrics.py
memory/: README.md  preferences.md  project-decisions.md
py-telegram-agent/: .gitignore  pyproject.toml
py-telegram-agent/src/: __init__.py  agent.py  bot.py  llm.py  main.py  stream.py
py-telegram-agent/src/tools/: file_tools.py  search_tools.py  shell_tools.py
scripts/: invoice_extract.py  pdf_to_md.py  probe_glm_stream.py  split_book.py  zhidu_client.py
skills/: README.md  invoice.md  office-word.md  paper-collector.md  paper-search.md  review.md  stat-analysis.md  zhidu.md
tests/: test_agent.py  test_bin_resolver.py  test_bot.py  test_codex_auth.py  test_config.py  test_context_builder.py  test_env_bootstrap.py  test_external.py  test_html.py  test_llm.py  test_logging.py  test_main.py  test_memory_store.py  test_pdf_to_md.py  test_repl_streamer.py  test_session_routes.py  test_session_store.py  test_session_summary.py  test_skills.py  test_stream.py  test_tools.py  (+3 more)
(+38 files in other folders)
