[project]
name = "py-telegram-agent"
version = "0.1.0"
description = "Lightweight Telegram AI Agent with multi-model support"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-telegram-bot>=21.0",
    "litellm>=1.60.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
py-telegram-agent = "src.main:main"
